fixed video truncation bug

--- a/services/frontend-service/src/components/Media/RoundedVideo/RoundedVideo.module.scss
+++ b/services/frontend-service/src/components/Media/RoundedVideo/RoundedVideo.module.scss
@@ -16,6 +16,7 @@
 
     .video {
         height: 100%;
+        transform-origin: center center;
 
         &.mirror {
             transform: rotateY(180deg);
